# otus

./: .gitignore
lesson-02/: lambda.cpp  tuple.cpp
task02/: CMakeLists.txt  ip_filter_lib.cpp  ip_filter_lib.h  main.cpp
task03/: CMakeLists.txt  ip_filter_lib.cpp  ip_filter_lib.h  ip_filter_tests.cpp  main.cpp  main_bench.cpp
task03/cmake/: GoogleBenchmark.cmake
